# randomstring-app

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  demo.sh  docker-compose.yml  index.mjs  main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
src/: main.py
src/api/: routes.py
src/core/: config.py  logging.py
src/middleware/: logging.py  rate_limit.py  security.py
src/models/: schemas.py
src/templates/: index.html
src/utils/: string_generator.py
tests/: conftest.py
tests/integration/: test_api.py  test_backward_compatibility.py
tests/unit/: test_string_generator.py
